templates/k3s-services/kms.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kms
  namespace: kms
  labels:
    app: kms
spec:
  selector:
    matchLabels:
      app: kms
  template:
    metadata:
      labels:
        app: kms
    spec:
      containers:
      - name: kms
        image: docker.io/mikolatero/vlmcsd
        ports:
        - name: svc-1688-udp
          containerPort: 1688
          protocol: UDP
        - name: svc-1688-tcp
          containerPort: 1688
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kms-lb
  namespace: kms
spec:
  selector:
    app: kms
  ports:
    - name: 1688-udp
      port: 1688
      targetPort: 1688
      protocol: UDP
    - name: 1688-tcp
      port: 1688
      targetPort: 1688
      protocol: TCP
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 10.4.20.203
